--- a/wp-content/themes/bruden/assets/scss/blog.scss
+++ b/wp-content/themes/bruden/assets/scss/blog.scss
@@ -75,3 +75,24 @@ $grey: #7F7F7F;
         }
     }
 }
+
+// sidebar
+.sidebar {
+    h2{
+        position: relative;
+        text-align: center;
+        margin-bottom: 60px;
+        text-transform: capitalize;
+        &::after{
+            content: '';
+            display: block;
+            position: absolute;
+            height: 1px;
+            width: 100px;
+            left: 50%;
+            bottom: -15px;
+            transform: translateX(-50%);
+            background: $red;
+        }
+    }
+}
