--- a/wp-content/themes/bruden/assets/css/post.css
+++ b/wp-content/themes/bruden/assets/css/post.css
@@ -65,3 +65,11 @@
   letter-spacing: 0.05em;
   color: #000000;
 }
+
+.sidebar__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 260px;
+      grid-template-columns: auto 260px;
+  gap: 40px;
+}
