--- a/wp-content/themes/bruden/assets/scss/style.scss
+++ b/wp-content/themes/bruden/assets/scss/style.scss
@@ -431,3 +431,59 @@ body{
         }
     }
 }
+
+// sidebar
+// sidebar
+.sidebar {
+    h2{
+        position: relative;
+        display: inline-block;
+        margin-bottom: 30px;
+        text-transform: capitalize;
+        &::after{
+            content: '';
+            display: block;
+            position: absolute;
+            height: 1px;
+            width: 100px;
+            left: 0;
+            bottom: -15px;
+            background: $red;
+        }
+    }
+    li a{
+        font-size: 16px;
+        letter-spacing: 0.05em;
+        color: #000000;
+    }
+    li{
+        padding-top: 15px;
+        display: block;
+        &:not(:last-child){
+            padding-bottom: 15px;
+            border-bottom: 1px solid #000;
+        }
+        &:hover{
+            text-decoration: underline;   
+        }
+    }
+    .side-widget{
+        &:not(:last-child){
+            margin-bottom: 50px;
+        }
+    }
+    .rpwwt-post-date{
+        font-weight: 500;
+        text-decoration: underline;
+        color: $grey;
+        margin-top: 5px;
+    }
+    .rpwwt-post-title{
+        font-family: 'Cormorant';
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 19px;
+        letter-spacing: 0.1em;
+        color: #000;
+    }
+}
