--- a/wp-content/themes/bruden/assets/css/blog.css
+++ b/wp-content/themes/bruden/assets/css/blog.css
@@ -97,8 +97,8 @@
 
 .sidebar h2 {
   position: relative;
-  text-align: center;
-  margin-bottom: 60px;
+  display: inline-block;
+  margin-bottom: 30px;
   text-transform: capitalize;
 }
 
@@ -108,9 +108,55 @@
   position: absolute;
   height: 1px;
   width: 100px;
-  left: 50%;
+  left: 0;
   bottom: -15px;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
   background: #DE1616;
+}
+
+.sidebar li a {
+  font-size: 16px;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
+
+.sidebar li {
+  padding-top: 15px;
+  display: block;
+}
+
+.sidebar li:not(:last-child) {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #000;
+}
+
+.sidebar li:hover {
+  text-decoration: underline;
+}
+
+.sidebar .side-widget:not(:last-child) {
+  margin-bottom: 50px;
+}
+
+.sidebar .rpwwt-post-date {
+  font-weight: 500;
+  text-decoration: underline;
+  color: #7F7F7F;
+  margin-top: 5px;
+}
+
+.sidebar .rpwwt-post-title {
+  font-family: 'Cormorant';
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.1em;
+  color: #000;
+}
+
+.sidebar__container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 260px auto;
+      grid-template-columns: 260px auto;
+  gap: 40px;
 }
