--- a/wp-content/themes/bruden/assets/css/blog.css
+++ b/wp-content/themes/bruden/assets/css/blog.css
@@ -3,9 +3,21 @@
   padding-bottom: 90px;
 }
 
+@media (max-width: 768px) {
+  .blog {
+    padding-bottom: 10px;
+  }
+}
+
 .blog__title {
   text-align: center;
   margin-bottom: 50px;
+}
+
+@media (max-width: 768px) {
+  .blog__title {
+    margin-bottom: 20px;
+  }
 }
 
 .blog__list {
@@ -16,12 +28,27 @@
   gap: 40px;
 }
 
+@media (max-width: 1024px) {
+  .blog__list {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
 .blog__item-img {
   width: 100%;
   height: 245px;
   -o-object-fit: cover;
      object-fit: cover;
   margin-bottom: 20px;
+}
+
+@media (max-width: 1024px) {
+  .blog__item-img {
+    height: auto;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
 }
 
 .blog__item-date {
@@ -76,6 +103,14 @@
   margin-top: 40px;
 }
 
+@media (max-width: 578px) {
+  .blog__paggination {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .blog__paggination-item {
   width: 30px;
   height: 30px;
@@ -90,67 +125,13 @@
           justify-content: center;
 }
 
+.blog__paggination-item a {
+  color: #000;
+}
+
 .blog__paggination-item_active {
   background: #000;
   color: #fff;
-}
-
-.sidebar h2 {
-  position: relative;
-  display: inline-block;
-  margin-bottom: 30px;
-  text-transform: capitalize;
-}
-
-.sidebar h2::after {
-  content: '';
-  display: block;
-  position: absolute;
-  height: 1px;
-  width: 100px;
-  left: 0;
-  bottom: -15px;
-  background: #DE1616;
-}
-
-.sidebar li a {
-  font-size: 16px;
-  letter-spacing: 0.05em;
-  color: #000000;
-}
-
-.sidebar li {
-  padding-top: 15px;
-  display: block;
-}
-
-.sidebar li:not(:last-child) {
-  padding-bottom: 15px;
-  border-bottom: 1px solid #000;
-}
-
-.sidebar li:hover {
-  text-decoration: underline;
-}
-
-.sidebar .side-widget:not(:last-child) {
-  margin-bottom: 50px;
-}
-
-.sidebar .rpwwt-post-date {
-  font-weight: 500;
-  text-decoration: underline;
-  color: #7F7F7F;
-  margin-top: 5px;
-}
-
-.sidebar .rpwwt-post-title {
-  font-family: 'Cormorant';
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.1em;
-  color: #000;
 }
 
 .sidebar__container {
@@ -159,4 +140,19 @@
   -ms-grid-columns: 260px auto;
       grid-template-columns: 260px auto;
   gap: 40px;
+}
+
+@media (max-width: 768px) {
+  .sidebar__container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
 }
