--- a/wp-content/themes/bruden/assets/scss/blog.scss
+++ b/wp-content/themes/bruden/assets/scss/blog.scss
@@ -6,14 +6,23 @@ $grey: #7F7F7F;
 .blog{
     padding-top: 55px;
     padding-bottom: 90px;
+    @media(max-width:768px){
+       padding-bottom: 10px;
+    }
     &__title{
         text-align: center;
         margin-bottom: 50px;
+        @media(max-width:768px){
+            margin-bottom: 20px;
+        }
     }
     &__list{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 40px;
+        @media(max-width:1024px){
+            grid-template-columns: 1fr;
+        }
     }
     &__item{
         &-img{
@@ -21,6 +30,10 @@ $grey: #7F7F7F;
             height: 245px;
             object-fit: cover;
             margin-bottom: 20px;
+            @media(max-width:1024px){
+                height: auto;
+                object-fit: contain;
+            }
         }
         &-date{
             color: $grey;
@@ -62,12 +75,18 @@ $grey: #7F7F7F;
         justify-content: flex-end;
         width: 100%;
         margin-top: 40px;
+        @media(max-width:578px){
+            justify-content: center;
+        }
         &-item{
             width: 30px;
             height: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
+            a{
+                color: #000;
+            }
             &_active{
                 background: #000;
                 color: #fff;
@@ -81,4 +100,13 @@ $grey: #7F7F7F;
     display: grid;
     grid-template-columns: 260px auto;
     gap: 40px;
+    @media(max-width:768px){
+        grid-template-columns: 1fr;
+    }
+}
+
+.sidebar{
+    @media(max-width:768px){
+        order: 2;
+    }
 }
