--- a/wp-content/themes/bruden/assets/scss/style.scss
+++ b/wp-content/themes/bruden/assets/scss/style.scss
@@ -245,7 +245,7 @@ button, input[type="submit"]{
                 margin-bottom: 25px;
             }
         }
-        &.current_page_parent{
+        &.current-menu-item{
             a{
                 color: $red;
             }
