--- a/wp-content/plugins/recent-posts-widget-with-thumbnails/public.css
+++ b/wp-content/plugins/recent-posts-widget-with-thumbnails/public.css
@@ -5,3 +5,4 @@
 .rpwwt-widget .screen-reader-text:focus {background-color: #f1f1f1; border-radius: 3px; box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6); clip: auto !important; -webkit-clip-path: none; clip-path: none; color: #21759b; display: block; font-size: 0.875rem; font-weight: 700; height: auto; right: 5px; line-height: normal; padding: 15px 23px 14px; text-decoration: none; top: 5px; width: auto; z-index: 100000; }
 .rpwwt-widget ul li img { display: inline; float: left; margin: .3em .75em .75em 0; }
 #rpwwt-recent-posts-widget-with-thumbnails-2 img { width: 80px; height: 80px; }
+#rpwwt-recent-posts-widget-with-thumbnails-3 img { width: 75px; height: 75px; }
