--- a/wp-content/themes/bruden/assets/css/blog.css
+++ b/wp-content/themes/bruden/assets/css/blog.css
@@ -2,39 +2,30 @@
   padding-top: 55px;
   padding-bottom: 90px;
 }
-
 @media (max-width: 768px) {
   .blog {
     padding-bottom: 10px;
   }
 }
-
 .blog__title {
   text-align: center;
   margin-bottom: 50px;
 }
-
 @media (max-width: 768px) {
   .blog__title {
     margin-bottom: 20px;
   }
 }
-
 .blog__list {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 40px;
 }
-
 @media (max-width: 1024px) {
   .blog__list {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
-
 .blog__item-img {
   width: 100%;
   height: 245px;
@@ -42,7 +33,6 @@
      object-fit: cover;
   margin-bottom: 20px;
 }
-
 @media (max-width: 1024px) {
   .blog__item-img {
     height: auto;
@@ -50,27 +40,27 @@
        object-fit: contain;
   }
 }
-
+.blog__item-title {
+  display: inline-block;
+  letter-spacing: 0.1em;
+  color: #000000;
+}
 .blog__item-date {
   color: #7F7F7F;
   font-weight: 500;
   padding-bottom: 15px;
   border-bottom: 1px solid #7F7F7F;
   margin-top: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .blog__item-date::before {
-  content: '';
+  content: "";
   display: block;
   width: 12px;
   height: 12px;
   margin-right: 5px;
   background: url(../img/date.svg) center/cover no-repeat;
 }
-
 .blog__item-content {
   margin-top: 20px;
   font-size: 18px;
@@ -78,81 +68,56 @@
   letter-spacing: 0.05em;
   margin-bottom: 20px;
 }
-
 .blog__item-more {
   font-weight: 500;
   text-decoration: underline;
   color: #000;
   text-transform: capitalize;
 }
-
 .blog__item-more:hover {
   text-decoration: none;
 }
-
 .blog__paggination {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 10px;
   font-size: 18px;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   width: 100%;
   margin-top: 40px;
 }
-
 @media (max-width: 578px) {
   .blog__paggination {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 }
-
 .blog__paggination-item {
   width: 30px;
   height: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .blog__paggination-item a {
   color: #000;
 }
-
 .blog__paggination-item_active {
   background: #000;
   color: #fff;
 }
 
 .sidebar__container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 260px auto;
-      grid-template-columns: 260px auto;
+  grid-template-columns: 260px auto;
   gap: 40px;
 }
-
 @media (max-width: 768px) {
   .sidebar__container {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
 @media (max-width: 768px) {
   .sidebar {
-    -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2;
+    order: 2;
   }
 }
