--- a/wp-content/themes/bruden/assets/css/main.css
+++ b/wp-content/themes/bruden/assets/css/main.css
@@ -1,11 +1,9 @@
 .hero .container {
   position: relative;
 }
-
 .hero__img {
   height: 65vh;
 }
-
 @media (max-width: 992px) {
   .hero__img {
     height: 35vh;
@@ -13,38 +11,25 @@
     margin-bottom: 50px;
   }
 }
-
 .hero .btn {
   border: 1px solid #000;
-  -webkit-transition: background .3s, color .3s;
-  transition: background .3s, color .3s;
+  transition: background 0.3s, color 0.3s;
 }
-
 .hero .btn:hover {
   background: #fff;
   color: #000;
 }
-
 .hero__content {
   max-width: 540px;
-  -webkit-transform: translateX(-50vw);
-          transform: translateX(-50vw);
+  transform: translateX(-50vw);
   opacity: 0;
-  -webkit-transition: opacity .5s .5s, -webkit-transform 1s;
-  transition: opacity .5s .5s, -webkit-transform 1s;
-  transition: transform 1s, opacity .5s .5s;
-  transition: transform 1s, opacity .5s .5s, -webkit-transform 1s;
+  transition: transform 1s, opacity 0.5s 0.5s;
 }
-
 .hero .swiper-slide-active .hero__content {
   opacity: 1;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+  transform: translateX(0);
 }
-
 .hero__cats {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 5px;
   color: #7F7F7F;
@@ -52,32 +37,25 @@
   font-weight: 400;
   font-style: italic;
 }
-
 @media (max-width: 992px) {
   .hero__cats {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 }
-
 .hero__cats-item:not(:last-child)::after {
-  content: ' -';
+  content: " -";
 }
-
 .hero__title {
   text-transform: capitalize;
   font-weight: 400;
   margin-bottom: 20px;
   line-height: 130%;
 }
-
 @media (max-width: 578px) {
   .hero__title {
     font-size: 24px;
   }
 }
-
 .hero__text {
   font-size: 22px;
   line-height: 160%;
@@ -85,7 +63,6 @@
   letter-spacing: 0.1em;
   margin-bottom: 35px;
 }
-
 @media (max-width: 578px) {
   .hero__text {
     font-size: 16px;
@@ -98,7 +75,6 @@
   width: 100%;
   height: 65vh;
 }
-
 @media (max-width: 992px) {
   .hero-swiper {
     height: 93vh;
@@ -106,25 +82,15 @@
 }
 
 .hero__swiper-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   padding-top: 68px;
   position: relative;
 }
-
 @media (max-width: 992px) {
   .hero__swiper-item {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    flex-direction: column-reverse;
     text-align: center;
   }
 }
@@ -133,33 +99,25 @@
   position: absolute;
   left: -25px;
 }
-
 @media (max-width: 1276px) {
   .hero-swiper__pagination {
     position: static;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     gap: 10px;
     margin-top: 20px;
   }
 }
-
 @media (max-width: 992px) {
   .hero-swiper__pagination {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 }
-
 .hero-swiper__pagination .swiper-pagination-bullet {
   width: 10px;
   height: 10px;
   background: #Fff;
   border: 1px solid #000;
 }
-
 .hero-swiper__pagination .swiper-pagination-bullet-active {
   background: #000000;
 }
@@ -169,7 +127,6 @@
   background: url(../img/additional.png) center/cover no-repeat;
   position: relative;
 }
-
 .additional .container::before {
   background-color: rgba(255, 255, 255, 0.3);
   content: "";
@@ -180,19 +137,14 @@
   top: 10px;
   opacity: 0;
   position: absolute;
-  -webkit-transform: rotate3d(1, 1, 0, 100deg);
-          transform: rotate3d(1, 1, 0, 100deg);
-  -webkit-transition: all 0.7s ease 0s;
+  transform: rotate3d(1, 1, 0, 100deg);
   transition: all 0.7s ease 0s;
   border-radius: 5px;
 }
-
 .additional .container:hover::before {
-  -webkit-transform: rotate3d(0, 0, 0, 0deg);
-          transform: rotate3d(0, 0, 0, 0deg);
+  transform: rotate3d(0, 0, 0, 0deg);
   opacity: 1;
 }
-
 .additional__title {
   color: #fff;
   text-align: right;
@@ -202,15 +154,12 @@
   max-width: 232px;
   line-height: 160%;
 }
-
 .additional__btn {
   position: absolute;
   bottom: 40px;
   right: 40px;
-  -webkit-transition: background .3s, color .3s;
-  transition: background .3s, color .3s;
+  transition: background 0.3s, color 0.3s;
 }
-
 .additional__btn:hover {
   background: #000;
   color: #fff;
@@ -219,35 +168,25 @@
 .banner {
   padding: 90px 0;
 }
-
 @media (max-width: 992px) {
   .banner {
     padding: 45px 0;
   }
 }
-
 .banner .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 40px;
 }
-
 @media (max-width: 578px) {
   .banner .container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
-
 .banner__part {
   position: relative;
   aspect-ratio: 1;
   width: 50%;
 }
-
 .banner__part::before {
   background-color: rgba(255, 255, 255, 0.3);
   content: "";
@@ -258,22 +197,17 @@
   top: 10px;
   opacity: 0;
   position: absolute;
-  -webkit-transform: rotate3d(1, 1, 0, 100deg);
-          transform: rotate3d(1, 1, 0, 100deg);
-  -webkit-transition: all 0.7s ease 0s;
+  transform: rotate3d(1, 1, 0, 100deg);
   transition: all 0.7s ease 0s;
   border-radius: 5px;
 }
-
 .banner__part:hover::before {
-  -webkit-transform: rotate3d(0, 0, 0, 0deg);
-          transform: rotate3d(0, 0, 0, 0deg);
+  transform: rotate3d(0, 0, 0, 0deg);
   opacity: 1;
 }
-
 @media (max-width: 768px) {
   .banner__part::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     width: 100%;
@@ -283,58 +217,48 @@
     background: rgba(255, 255, 255, 0.35);
   }
 }
-
 @media (max-width: 578px) {
   .banner__part {
     width: 100%;
   }
 }
-
 .banner__title {
   position: absolute;
   top: 40px;
   max-width: 240px;
   z-index: 3;
 }
-
 .banner .btn {
   background: transparent;
   position: absolute;
   bottom: 40px;
   z-index: 3;
-  -webkit-transition: background .3s, color .3s;
-  transition: background .3s, color .3s;
+  transition: background 0.3s, color 0.3s;
 }
-
 .banner .btn:hover {
   background: #fff;
   color: #000;
 }
-
 .banner__left .banner__title {
   left: 40px;
 }
-
 .banner__left span {
   font-size: 18px;
   font-weight: 300;
   line-height: 160%;
   letter-spacing: 0.05em;
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
-
 .banner__left .btn {
   border: 1px solid #000;
   color: #000;
   left: 40px;
 }
-
 .banner__right .banner__title {
   right: 40px;
   text-align: right;
   color: #fff;
 }
-
 .banner__right .btn {
   border: 1px solid #fff;
   color: #fff;
@@ -344,28 +268,22 @@
 .fits {
   padding: 90px 0;
 }
-
 @media (max-width: 992px) {
   .fits {
     padding: 45px 0;
   }
 }
-
 .fits__inner {
   border: 1px solid #000;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   position: relative;
 }
-
 @media (max-width: 992px) {
   .fits__inner {
     position: relative;
     height: 224px;
   }
 }
-
 .fits__inner::before {
   background-color: rgba(255, 255, 255, 0.3);
   content: "";
@@ -376,27 +294,19 @@
   top: 10px;
   opacity: 0;
   position: absolute;
-  -webkit-transform: rotate3d(1, 1, 0, 100deg);
-          transform: rotate3d(1, 1, 0, 100deg);
-  -webkit-transition: all 0.7s ease 0s;
+  transform: rotate3d(1, 1, 0, 100deg);
   transition: all 0.7s ease 0s;
   border-radius: 5px;
 }
-
 .fits__inner:hover::before {
-  -webkit-transform: rotate3d(0, 0, 0, 0deg);
-          transform: rotate3d(0, 0, 0, 0deg);
+  transform: rotate3d(0, 0, 0, 0deg);
   opacity: 1;
 }
-
 .fits__content {
   border-right: 1px solid #000;
   padding: 40px;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 300px;
-          flex: 0 0 300px;
+  flex: 0 0 300px;
 }
-
 @media (max-width: 992px) {
   .fits__content {
     position: absolute;
@@ -408,37 +318,30 @@
     border: none;
   }
 }
-
 @media (max-width: 578px) {
   .fits__content {
     text-align: center;
   }
 }
-
 .fits__img {
   display: block;
   width: 100%;
 }
-
 @media (max-width: 992px) {
   .fits__img {
     width: 100vw;
     height: 100%;
   }
 }
-
 .fits__text {
   font-size: 18px;
   margin-top: 10px;
   margin-bottom: 32px;
 }
-
 .fits__btn {
   border: 1px solid #000;
-  -webkit-transition: background .3s, color .3s;
-  transition: background .3s, color .3s;
+  transition: background 0.3s, color 0.3s;
 }
-
 .fits__btn:hover {
   background: #000;
   color: #fff;
@@ -447,47 +350,36 @@
 .deal {
   padding-top: 90px;
 }
-
 @media (max-width: 992px) {
   .deal {
     padding-top: 45px;
   }
 }
-
 .deal__img {
   width: 260px;
 }
-
 .deal__content {
   border-width: 1px 1px 1px 0px;
   border-style: solid;
   border-color: #7F7F7F;
   padding: 25px;
 }
-
 @media (max-width: 578px) {
   .deal__content {
     border-width: 1px 1px 1px 1px;
     margin-top: 25px;
   }
 }
-
 .deal__name {
   text-align: center;
   margin-bottom: 10px;
   font-size: 18px;
 }
-
 .deal__stars {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-bottom: 10px;
 }
-
 .deal__price {
   font-weight: 300;
   font-size: 22px;
@@ -497,22 +389,15 @@
   padding-bottom: 15px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
-
 .deal__text {
   margin-top: 10px;
   letter-spacing: 0.05em;
 }
-
 .deal__cols {
   margin-top: 20px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .deal__btn {
   background: #000;
   color: #fff;
@@ -527,39 +412,27 @@
   font-family: inherit;
   margin-right: auto;
   border: 1px solid #000;
-  -webkit-transition: background .3s, color .3s;
-  transition: background .3s, color .3s;
+  transition: background 0.3s, color 0.3s;
 }
-
 .deal__btn:hover {
   background: #fff;
   color: #000;
 }
-
 .deal__heart, .deal__seen {
   border: none;
   background: none;
 }
-
 .deal__heart {
   margin-right: 20px;
 }
 
 .deal__swiper-slide {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background: #fff;
 }
-
 @media (max-width: 578px) {
   .deal__swiper-slide {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
 }
