--- a/wp-content/themes/bruden/assets/css/post.css
+++ b/wp-content/themes/bruden/assets/css/post.css
@@ -2,89 +2,67 @@
   padding-top: 90px;
   padding-bottom: 90px;
 }
-
 @media (max-width: 768px) {
   .post {
     padding-bottom: 10px;
   }
 }
-
 @media (max-width: 578px) {
   .post {
     text-align: center;
   }
 }
-
 .post__title {
   text-align: center;
   margin-bottom: 50px;
 }
-
 @media (max-width: 768px) {
   .post__title {
     margin-bottom: 20px;
   }
 }
-
 .post__img {
   width: 100%;
   height: auto;
   margin-bottom: 30px;
 }
-
 .post__info {
   color: #7F7F7F;
   font-weight: 500;
   font-size: 18px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 5px;
   margin-bottom: 30px;
 }
-
 @media (max-width: 578px) {
   .post__info {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
     margin-bottom: 15px;
   }
 }
-
 .post__info-date {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .post__info-date::before {
-  content: '';
+  content: "";
   display: block;
   width: 12px;
   height: 12px;
   margin-right: 5px;
   background: url(../img/date.svg) center/cover no-repeat;
 }
-
 .post__info-category {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .post__info-category::before {
-  content: '';
+  content: "";
   display: block;
   width: 10px;
   height: 12px;
   margin-right: 5px;
   background: url(../img/cat.svg) center/cover no-repeat;
 }
-
 .post__content {
   margin-top: 30px;
   font-size: 18px;
@@ -92,7 +70,6 @@
   letter-spacing: 0.05em;
   color: #000000;
 }
-
 @media (max-width: 578px) {
   .post__content {
     margin-top: 15px;
@@ -100,16 +77,111 @@
 }
 
 .sidebar__container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto 260px;
-      grid-template-columns: auto 260px;
+  grid-template-columns: auto 260px;
   gap: 40px;
 }
-
 @media (max-width: 768px) {
   .sidebar__container {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+}
+
+.latest {
+  padding-top: 90px;
+}
+@media (max-width: 992px) {
+  .latest {
+    padding-top: 45px;
+  }
+}
+.latest__img {
+  width: 260px;
+}
+.latest__swiper-slide a {
+  display: block;
+  width: 200px;
+}
+.latest__swiper-slide a img {
+  display: block;
+  height: auto;
+  width: 100%;
+}
+.latest__content {
+  border-width: 1px 1px 1px 0px;
+  border-style: solid;
+  border-color: #7F7F7F;
+  padding: 25px;
+}
+@media (max-width: 578px) {
+  .latest__content {
+    border-width: 1px 1px 1px 1px;
+    margin-top: 25px;
+  }
+}
+.latest__name {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+.latest__stars {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.latest__price {
+  font-weight: 300;
+  font-size: 22px;
+  letter-spacing: 0.05em;
+  color: #000000;
+  text-align: center;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.latest__text {
+  margin-top: 10px;
+  letter-spacing: 0.05em;
+}
+.latest__cols {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+}
+.latest__btn {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 14px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  /* identical to box height, or 100% */
+  letter-spacing: 0.1em;
+  text-transform: capitalize;
+  font-family: inherit;
+  margin-right: auto;
+  border: 1px solid #000;
+  transition: background 0.3s, color 0.3s;
+}
+.latest__btn:hover {
+  background: #fff;
+  color: #000;
+}
+.latest__heart, .latest__seen {
+  border: none;
+  background: none;
+}
+.latest__heart {
+  margin-right: 20px;
+}
+
+.latest__swiper-slide {
+  display: flex;
+  align-items: center;
+  background: #fff;
+}
+@media (max-width: 578px) {
+  .latest__swiper-slide {
+    flex-direction: column;
   }
 }
