--- a/wp-content/themes/bruden/assets/scss/post.scss
+++ b/wp-content/themes/bruden/assets/scss/post.scss
@@ -82,3 +82,103 @@ $grey: #7F7F7F;
         grid-template-columns: 1fr;
     }
 }
+
+// latest
+.latest{
+    padding-top: 90px;
+    @media(max-width:992px){
+        padding-top: 45px;
+    }
+    &__img{
+        width: 260px;
+    }
+    &__swiper-slide {
+        a {
+            display: block;
+            width: 200px;
+
+            img {
+                display: block;
+                height: auto;
+                width: 100%;
+            }
+        }
+    }
+    &__content{
+        border-width: 1px 1px 1px 0px;
+        border-style: solid;
+        border-color: $grey;
+        padding: 25px;
+        @media(max-width:578px){
+            border-width: 1px 1px 1px 1px;
+            margin-top: 25px;
+        }
+    }
+    &__name{
+        text-align: center;
+        margin-bottom: 10px;
+        font-size: 18px;
+    }
+    &__stars{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    &__price{
+        font-weight: 300;
+        font-size: 22px;
+        letter-spacing: 0.05em;
+        color: #000000;
+        text-align: center;
+        padding-bottom: 15px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    &__text{
+        margin-top: 10px;
+        letter-spacing: 0.05em;
+    }
+    &__cols{
+        margin-top: 20px;
+        display: flex;
+        align-items: center;
+    }
+    &__btn{
+        background: #000;
+        color: #fff;
+        border: none;
+        padding: 8px 14px;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 14px;
+        /* identical to box height, or 100% */
+
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+        font-family: inherit;
+        margin-right: auto;
+        border: 1px solid #000;
+        transition: background .3s, color .3s;
+        &:hover{
+            background: #fff;
+            color: #000;
+        }
+    }
+    &__heart,
+    &__seen{
+        border: none;
+        background: none;
+    }
+    &__heart{
+        margin-right: 20px;
+    }
+}
+
+.latest__swiper-slide{
+    display: flex;
+    align-items: center;
+    background: #fff;
+    @media(max-width:578px){
+        flex-direction: column;
+    }
+}
