--- a/wp-content/themes/bruden/assets/scss/blog.scss
+++ b/wp-content/themes/bruden/assets/scss/blog.scss
@@ -3,12 +3,15 @@ $yellow: #FDAE04;
 $red: #DE1616;
 $grey: #7F7F7F;
 
-.blog{
-    padding-top: 55px;
-    padding-bottom: 90px;
-    @media(max-width:768px){
-       padding-bottom: 10px;
+section.blog{
+    padding: 90px 0;
+    @media(max-width:992px){
+        padding-bottom: 45px;
     }
+}
+
+.blog{
+
     &__title{
         text-align: center;
         margin-bottom: 50px;
