--- a/wp-content/themes/bruden/assets/scss/style.scss
+++ b/wp-content/themes/bruden/assets/scss/style.scss
@@ -714,12 +714,19 @@ color: #000000;
 
 //   category
 
-.category{
+section.category{
     padding: 90px 0;
     text-align: center;
     @media(max-width:992px){
       padding: 45px 0;
     }
+    img{
+        width: 100%;
+        height: auto;
+      }
+}
+
+.category{
     &__name{
       color: #000;
       padding: 20px 0;
@@ -729,10 +736,6 @@ color: #000000;
       &:hover{
           box-shadow: 0px 6px 34px rgba(0, 0, 0, 0.15);
       }
-    }
-    img{
-      width: 100%;
-      height: auto;
     }
   }
   
