--- a/wp-content/themes/bruden/assets/css/main.css
+++ b/wp-content/themes/bruden/assets/css/main.css
@@ -164,9 +164,18 @@
   background: #000000;
 }
 
+.additional__video-bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0;
+  left: 0;
+}
+
 .additional .container {
   height: 100vh;
-  background: url(../img/additional.png) center/cover no-repeat;
   position: relative;
 }
 
@@ -197,6 +206,7 @@
   color: #fff;
   text-align: right;
   position: absolute;
+  z-index: 3;
   top: 40px;
   right: 40px;
   max-width: 232px;
@@ -207,6 +217,7 @@
   position: absolute;
   bottom: 40px;
   right: 40px;
+  z-index: 3;
   -webkit-transition: background .3s, color .3s;
   transition: background .3s, color .3s;
 }
