--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -41,29 +41,72 @@
         width: calc(100% - 300px);
         display: flex;
         flex-wrap: wrap;
-        column-gap: 40px;
 
         .woocommerce-product-gallery {
-            width: calc(50% - 20px);
+            width: 50%;
+            padding-right: 30px;
+            border-right: 1px solid rgba(0, 0, 0, 0.1);
         }
 
         .entry-summary {
-            width: calc(50% - 20px);
+            width: 50%;
+            padding-left: 30px;
         }
     }
 
     .woocommerce-tabs {
         width: 100%;
+        padding: 15px;
         margin-top: 40px;
+        border-radius: 5px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
 
         ul {
-            padding-bottom: 15px;
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             text-transform: uppercase;
+            font-size: 15px;
+            display: flex;
+            
+            li {
+                padding: 0 10px 15px;
+                position: relative;
+                top: 1px;
+
+                &.active {
+                    border-bottom: 1px solid #5c6ac4;
+
+                    a {
+                        color: #5c6ac4;
+                    }
+                }
+            }
         }
 
         .woocommerce-Tabs-panel {
             padding-top: 15px;
+        }
+
+        h2 {
+            margin-bottom: 15px;
+            font-weight: 500;
+            font-size: 16px;
+            text-transform: uppercase;
+        }
+
+        .woocommerce-product-attributes {
+            width: 100%;
+
+            th {
+                width: 15%;
+                padding: 8px;
+                text-align: left;
+                font-weight: 300;
+            }
+
+            td {
+                width: 85%;
+                padding: 8px;
+            }
         }
     }
 
