--- a/wp-content/themes/bruden/assets/css/style.css
+++ b/wp-content/themes/bruden/assets/css/style.css
@@ -441,6 +441,13 @@ button, input[type=submit] {
 .footer__link:hover::after {
   transform: scaleX(1);
 }
+.footer .sidebar h3::after {
+  content: none;
+}
+.footer .sidebar li {
+  padding-bottom: 0 !important;
+  border-bottom: 0 !important;
+}
 
 @media (max-width: 768px) {
   .sidebar {
@@ -529,6 +536,21 @@ button, input[type=submit] {
 }
 .sidebar a[aria-current=page] {
   color: #DE1616;
+}
+.sidebar .tag-cloud-link {
+  display: inline-block;
+  margin-bottom: 7px;
+  padding: 7px 14px;
+  background: #D9D9D9;
+  font-weight: 400;
+  font-size: 14px !important;
+  line-height: 1;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.5);
+}
+.sidebar .tag-cloud-link:not(:last-child) {
+  margin-right: 7px;
 }
 
 .special {
@@ -745,4 +767,38 @@ section.category img {
 .category-swiper {
   margin: -30px;
   padding: 30px;
+}
+
+.page-template-default .container {
+  display: flex;
+  -moz-column-gap: 40px;
+       column-gap: 40px;
+}
+.page-template-default .sidebar {
+  width: 260px;
+}
+@media (max-width: 992px) {
+  .page-template-default .sidebar {
+    display: none;
+  }
+}
+.page-template-default .content-wrapper {
+  width: calc(100% - 300px);
+}
+@media (max-width: 992px) {
+  .page-template-default .content-wrapper {
+    width: 100%;
+  }
+}
+.page-template-default .content-wrapper h1 {
+  margin-bottom: 30px;
+}
+.page-template-default .content-wrapper h2 {
+  margin-bottom: 20px;
+}
+.page-template-default .content-wrapper h3 {
+  margin-bottom: 15px;
+}
+.page-template-default .content-wrapper p {
+  margin-bottom: 10px;
 }
