--- a/wp-content/themes/bruden/assets/css/post.css
+++ b/wp-content/themes/bruden/assets/css/post.css
@@ -2,67 +2,89 @@
   padding-top: 90px;
   padding-bottom: 90px;
 }
+
 @media (max-width: 768px) {
   .post {
     padding-bottom: 10px;
   }
 }
+
 @media (max-width: 578px) {
   .post {
     text-align: center;
   }
 }
+
 .post__title {
   text-align: center;
   margin-bottom: 50px;
 }
+
 @media (max-width: 768px) {
   .post__title {
     margin-bottom: 20px;
   }
 }
+
 .post__img {
   width: 100%;
   height: auto;
   margin-bottom: 30px;
 }
+
 .post__info {
   color: #7F7F7F;
   font-weight: 500;
   font-size: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 5px;
   margin-bottom: 30px;
 }
+
 @media (max-width: 578px) {
   .post__info {
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-bottom: 15px;
   }
 }
+
 .post__info-date {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .post__info-date::before {
-  content: "";
+  content: '';
   display: block;
   width: 12px;
   height: 12px;
   margin-right: 5px;
   background: url(../img/date.svg) center/cover no-repeat;
 }
+
 .post__info-category {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
+
 .post__info-category::before {
-  content: "";
+  content: '';
   display: block;
   width: 10px;
   height: 12px;
   margin-right: 5px;
   background: url(../img/cat.svg) center/cover no-repeat;
 }
+
 .post__content {
   margin-top: 30px;
   font-size: 18px;
@@ -70,6 +92,7 @@
   letter-spacing: 0.05em;
   color: #000000;
 }
+
 @media (max-width: 578px) {
   .post__content {
     margin-top: 15px;
@@ -77,58 +100,73 @@
 }
 
 .sidebar__container {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: auto 260px;
+  -ms-grid-columns: auto 260px;
+      grid-template-columns: auto 260px;
   gap: 40px;
 }
+
 @media (max-width: 768px) {
   .sidebar__container {
-    grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 
 .latest {
   padding-top: 90px;
 }
+
 @media (max-width: 992px) {
   .latest {
     padding-top: 45px;
   }
 }
+
 .latest__img {
   width: 260px;
 }
+
 .latest__swiper-slide a {
   display: block;
   width: 200px;
 }
+
 .latest__swiper-slide a img {
   display: block;
-  height: auto;
-  width: 100%;
+  width: 150px;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .latest__content {
-  border-width: 1px 1px 1px 0px;
-  border-style: solid;
-  border-color: #7F7F7F;
   padding: 25px;
 }
+
 @media (max-width: 578px) {
   .latest__content {
-    border-width: 1px 1px 1px 1px;
     margin-top: 25px;
   }
 }
+
 .latest__name {
   text-align: center;
   margin-bottom: 10px;
   font-size: 18px;
 }
+
 .latest__stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 10px;
 }
+
 .latest__price {
   font-weight: 300;
   font-size: 22px;
@@ -138,15 +176,22 @@
   padding-bottom: 15px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .latest__text {
   margin-top: 10px;
   letter-spacing: 0.05em;
 }
+
 .latest__cols {
   margin-top: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .latest__btn {
   background: #000;
   color: #fff;
@@ -161,27 +206,39 @@
   font-family: inherit;
   margin-right: auto;
   border: 1px solid #000;
-  transition: background 0.3s, color 0.3s;
+  -webkit-transition: background .3s, color .3s;
+  transition: background .3s, color .3s;
 }
+
 .latest__btn:hover {
   background: #fff;
   color: #000;
 }
+
 .latest__heart, .latest__seen {
   border: none;
   background: none;
 }
+
 .latest__heart {
   margin-right: 20px;
 }
 
 .latest__swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: #fff;
 }
+
 @media (max-width: 578px) {
   .latest__swiper-slide {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
