--- a/wp-content/themes/bruden/assets/scss/post.scss
+++ b/wp-content/themes/bruden/assets/scss/post.scss
@@ -92,29 +92,49 @@ $grey: #7F7F7F;
     &__img{
         width: 260px;
     }
+    .swiper {
+        padding: 40px 20px;
+        @media(max-width:578px) {
+            padding: 0;
+        }
+    }
     &__swiper-slide {
         a {
             display: block;
-            width: 200px;
+            width: 150px;
+            @media(max-width:578px) {
+                width: 100%;
+            }
 
             img {
                 display: block;
-                width: 150px;
+                width: 100%;
                 height: 150px;
                 object-fit: cover;
+                @media(max-width:578px) {
+                    height: auto;
+                }
             }
+        }
+
+        &:hover {
+            filter: drop-shadow(0px 6px 10px rgba(0, 0, 0, 0.15));
         }
     }
     &__content{
-        padding: 25px;
+        width: calc(100% - 150px);
+        padding: 24px 15px;
         @media(max-width:578px){
+            width: 100%;
             margin-top: 25px;
         }
     }
     &__name{
         text-align: center;
+        padding-bottom: 10px;
         margin-bottom: 10px;
         font-size: 18px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
     &__stars{
         display: flex;
@@ -128,7 +148,6 @@ $grey: #7F7F7F;
         color: #000000;
         text-align: center;
         padding-bottom: 15px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     }
 
     &__text{
