--- a/wp-content/themes/bruden/assets/css/main.css
+++ b/wp-content/themes/bruden/assets/css/main.css
@@ -411,7 +411,8 @@
   display: flex;
   align-items: center;
 }
-.deal__btn {
+.deal__btn,
+.deal .button {
   background: #000;
   color: #fff;
   border: none;
@@ -427,9 +428,13 @@
   border: 1px solid #000;
   transition: background 0.3s, color 0.3s;
 }
-.deal__btn:hover {
+.deal__btn:hover,
+.deal .button:hover {
   background: #fff;
   color: #000;
+}
+.deal .added_to_cart {
+  display: none;
 }
 .deal__heart, .deal__seen {
   border: none;
