--- a/wp-content/themes/bruden/assets/scss/style.scss
+++ b/wp-content/themes/bruden/assets/scss/style.scss
@@ -774,31 +774,13 @@ color: #000000;
 }
 
 .news__swiper-slide{
-    box-shadow: 0px 6px 34px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
     padding: 20px;
     min-height: 460px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    &::before{
-        content: '';
-        display: block;
-        position: absolute;
-        top: 10px;
-        bottom: 10px;
-        right: 10px;
-        left: 10px;
-        background: rgba(255,255,255,.45);
-        opacity: 0;
-        transform: rotate3d(1,1,0,100deg);
-        transition: all 0.7s ease 0s;
-        border-radius: 5px;
-        }
-            &:hover::before{
-                transform: rotate3d(0,0,0,0deg);
-                opacity: 1;
-            }
 }
 
 //   category
@@ -867,5 +849,26 @@ section.category{
         p {
             margin-bottom: 10px;
         }
+    }
+}
+
+// preloader
+
+.preloader{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: 25;
+    background: #fff;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    transition: opacity .3s, top .3s;
+    &_hidden{
+        opacity: 0;
+        top: -100vh;
     }
 }
